fixing design on timeline alignment

--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -19,7 +19,7 @@
   margin: 0 auto;
 }
 
-.date-timeline  {
+.date-timeline {
   margin-left: 50px;
 }
 
@@ -29,7 +29,7 @@
   position: relative;
 }
 
-.fa-notes-medical{
+.fa-notes-medical {
   color: $button;
   font-size: 20px;
   position: absolute;
@@ -44,8 +44,8 @@
   align-items: flex-end;
 }
 
-#card-type-evenement-text{
-    color: white;
+#card-type-evenement-text {
+  color: white;
 }
 
 .text-timeline {
@@ -63,13 +63,13 @@
 
 /* The actual timeline (the vertical ruler) */
 .timeline::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 6px;
-  background-color: #766B77;
+  background-color: #766b77;
   top: 0;
   bottom: 0;
-  left: 50%;
+  left: 40px;
   margin-left: -3px;
 }
 
@@ -79,21 +79,21 @@
   padding-left: 10px;
   position: relative;
   background-color: inherit;
-  #white-text{
+  #white-text {
     color: white;
   }
 }
 
 /* The circles on the timeline */
 .container-timeline::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 25px;
   height: 25px;
-  right: -17px;
-  background-color: #94ECBE;
-  border: 4px solid #94ECBE;
-  top: 15px;
+  left: 25px;
+  background-color: #94ecbe;
+  border: 4px solid #94ecbe;
+  top: 10px;
   border-radius: 50%;
   z-index: 1;
 }
@@ -151,7 +151,6 @@
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
-
   /* Place the timelime to the left */
   .timeline::after {
     left: 31px;
